# cpp-app-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  meson.build  meson_options.txt
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.meson.in  README.uk_UA.md  meson.build
doc/diagrams/plantuml/: lib-class-structure.puml  template-project-app-structure.puml
doc/sections/en_US/: 1-cloning-the-cxx-template-project.md  2-forking-and-replacing-the-origin.md  3-1-required-tools-for-the-GNU-Linux-based-OS.md  3-10-optional-for-docker-container-runs.md  3-11-optional-for-snap-packager.md  3-11-optional-for-the-libxml2-integration.md  3-11-required-Wt-packages.md  3-11-required-package-for-Boost.Beast.md  3-11-required-package-for-Firebird-connection.md  3-11-required-package-for-PostgreSQL-connection.md  3-11-required-packages-for-the-MongoDB-connection.md  3-11-required-packages-for-the-MySQL.md  3-11-the-Qt6-required-packages.md  3-12-optional-for-the-OpenCV-integration.md  3-12-required-for-the-SDL2-development.md  3-12-required-for-the-SDL3-development.md  3-13-optional-for-the-snap-packager.md  3-14-optional-for-the-rpm-packager.md  3-15-optional-for-the-WIX-packager.md  3-16-optional-for-the-libcurl-integration.md  3-17-optional-for-the-nlohmann-json-integration.md  3-2-required-tools-for-the-MS-Windows-based-OS.md  3-3-optional-for-the-tests.md  3-4-optional-for-the-documentation.md  3-5-optional-for-the-code-formatting.md  3-9-optional-for-the-flatpak-packager.md  (+77 more)
meson/: meson.build
meson/template-project-AppImage-enabler/: meson.build
meson/template-project-OpenCV-enabler/: meson.build
meson/template-project-all-source-files/: meson.build
meson/template-project-clang-format-target/: meson.build
meson/template-project-clang-tidy-target/: meson.build
meson/template-project-configure-file/: meson.build
meson/template-project-cppcheck-target/: meson.build
meson/template-project-deb-enabler/: meson.build
meson/template-project-dockerers/: meson.build
meson/template-project-flatpak-target/: meson.build
meson/template-project-freebsd-pkg-enabler/: meson.build
meson/template-project-libcurl-enabler/: meson.build
meson/template-project-libxml2-enabler/: meson.build
meson/template-project-misc-variables-declare/: meson.build
meson/template-project-nlohmann-json-enabler/: meson.build
meson/template-project-profiler-gprof/: meson.build
meson/template-project-rpm-enabler/: meson.build
meson/template-project-sanitizers/: meson.build
meson/template-project-snap-enabler/: meson.build
meson/template-project-wix-enabler/: meson.build
src/: CMakeLists.txt  main.cpp  meson.build  project-global-decls.h.in  project-global-decls.h.meson.in
src/CURL/: CMakeLists.txt  CURLController.cpp  CURLController.h
src/Firebird/: CMakeLists.txt  Firebird.cpp  Firebird.h  IFbClient.h
src/PgSQLxx/: CMakeLists.txt  PgSQL.cpp  PgSQL.h
src/SDL2/: CMakeLists.txt  OpenGLIniter.cpp  OpenGLIniter.h  SDL2Context.cpp  SDL2Context.h  SDL2ContextBuilder.cpp  SDL2ContextBuilder.h  SDL2Initer.cpp  SDL2Initer.h
src/SDL3/: CMakeLists.txt  OpenGLIniter.cpp  OpenGLIniter.h  SDL3Context.cpp  SDL3Context.h  SDL3ContextBuilder.cpp  SDL3ContextBuilder.h  SDL3Initer.cpp  SDL3Initer.h
src/SFML/: CMakeLists.txt  SFMLContext.cpp  SFMLContext.h  SFMLContextBuilder.cpp  SFMLContextBuilder.h  SFMLIniter.cpp  SFMLIniter.h
src/app/: Application.cpp  Application.h  ApplicationContext.cpp  ApplicationContext.h  ApplicationFactory.cpp  ApplicationFactory.h  ApplicationHelpPrinter.cpp  ApplicationHelpPrinter.h  ApplicationVersionPrinter.cpp  ApplicationVersionPrinter.h  CMDParamNames.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  IApplication.h  IDBConnection.h  meson.build
src/beasthttp/: CMakeLists.txt  HttpContext.cpp  HttpContext.h  HttpController.cpp  HttpController.h  beast-includes.h
src/cocoa/: CMakeLists.txt  CocoaIniter.cpp  CocoaIniter.h  CocoaLauncher.h  cocoa_includes.h
src/converters/: ApplicationContext2LibraryContext.cpp  ApplicationContext2LibraryContext.h  CMakeLists.txt  meson.build
src/freeglut/: CMakeLists.txt  FreeGlutIniter.cpp  FreeGlutIniter.h
src/gdbus/: CMakeLists.txt  GDBusController.cpp  GDBusController.h
src/gtkmm/: CMakeLists.txt  GtkmmIniter.cpp  GtkmmIniter.h  GtkmmWindow.cpp  GtkmmWindow.h  gtkmm_includes.h
src/gtkmm3/: CMakeLists.txt  GtkmmIniter.cpp  GtkmmIniter.h  GtkmmWindow.cpp  GtkmmWindow.h  gtkmm_includes.h
src/gtkmm4/: CMakeLists.txt  GtkmmIniter.cpp  GtkmmIniter.h  gtkmm4_includes.h
src/lib/: CMakeLists.txt  meson.build
src/log/: CMakeLists.txt  log.h  meson.build  severity-macro-consts.h
src/lzma/: CMakeLists.txt  LzmaController.cpp  LzmaController.h
src/matplotxx/: CMakeLists.txt  MatPlotxxController.cpp  MatPlotxxController.h
src/mongodbcxx/: CMakeLists.txt  MongoDBController.cpp  MongoDBController.h  mongocxx-includes.h
src/mysqlcppconn/: CMakeLists.txt  MySQLController.cpp  MySQLController.h
src/opencv/: CMakeLists.txt  OpenCVController.cpp  OpenCVController.h
src/plotgencpp/: CMakeLists.txt  PlotGenCppController.cpp  PlotGenCppController.h
src/plplot/: CMakeLists.txt  PLplotController.cpp  PLplotController.h
src/qt6/: CMakeLists.txt  QMLRes.cpp  QMLRes.h  Qt6Initer.cpp  Qt6Initer.h  resources.qrc
src/qtdbus/: CMakeLists.txt  QtDBusController.cpp  QtDBusController.h  SystemInformation.cpp  SystemInformation.h
src/qtvulkan/: CMakeLists.txt  QtVulkanController.cpp  QtVulkanController.h
src/sdbuscxx/: CMakeLists.txt  SDBusCxxController.cpp  SDBusCxxController.h
src/sqlite3cpp/: CMakeLists.txt  SQLiteController.cpp  SQLiteController.h
src/tests/: CMakeLists.txt
src/vulkan/: CMakeLists.txt  VulkanController.cpp  VulkanController.h
src/winui3/: CMakeLists.txt  WinUI3Initer.cpp  WinUI3Initer.h  WinUI3Launcher.h  winui3_includes.h
src/wt4/: CMakeLists.txt  Wt4Context.cpp  Wt4Context.h  Wt4Server.cpp  Wt4Server.h
src/wxwidgets/: CMakeLists.txt  WxLauncher.h  WxWidgetsIniter.cpp  WxWidgetsIniter.h  wxwidgets_includes.h
src/zlib/: CMakeLists.txt  ZlibController.cpp  ZlibController.h
(+892 files in other folders)
