option(
  'ENABLE_DOC_DOXYGEN', 
  type: 'boolean', 
  value: false, 
  description: 'Enable the documentation build with the Doxygen'
)

option(
  'DOXYGEN_DO_INSTALL', 
  type: 'boolean', 
  value: false, 
  description: 'Enable the generated documentation installation'
)

option(
  'ENABLE_UNIT_TESTS', 
  type: 'boolean', 
  value: false, 
  description: 'Enable the unit tests'
)

option(
  'ENABLE_CLANGFORMAT',
  type: 'boolean',
  value: false,
  description: 'Enables the code format with a clang-format.'
)
